# synapse

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
examples/: sub_client.rs  sub_client2.rs
protos/: health_check.proto  hub.proto
src/: health_service.rs  hub.rs  lib.rs  main.rs  typos.rs
src/core/: mod.rs  service_registry.rs
src/health/: mod.rs  service.rs
src/pb/: health_check.rs  mod.rs  service_registry.rs
src/service/: client.rs  hub.rs  mod.rs
