[package]
name = "register-center"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
dashmap = "5"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.80"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"
